[gd_scene load_steps=9 format=3 uid="uid://u8latgnj6og5"]

[ext_resource type="Script" path="res://scenes/levels/Level_Select/level_select.gd" id="1_4bwas"]
[ext_resource type="PackedScene" uid="uid://bjeobrkgw5ahv" path="res://scenes/objects/swing-light.tscn" id="1_dduat"]
[ext_resource type="PackedScene" uid="uid://xcup5opmlyy7" path="res://scenes/shaders/ScreenEffects.tscn" id="2_x00pf"]
[ext_resource type="PackedScene" uid="uid://b0pi4ocu1rpdi" path="res://scenes/levels/Transition/transition.tscn" id="3_gou6y"]
[ext_resource type="PackedScene" uid="uid://v4ylrqt2e871" path="res://scenes/levels/game_sequence/1-1_Tutorial_throw.tscn" id="4_h634r"]
[ext_resource type="FontFile" uid="uid://cs1qpj4180qrs" path="res://assets/Fonts/DePixelHalbfett.otf" id="6_rpahc"]

[sub_resource type="GDScript" id="GDScript_f8i8q"]
script/source = "extends RigidBody2D

@export var light : RigidBody2D
var dragging = false 
@onready var collision_shape_2d = $CollisionShape2D

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	self.global_position = get_global_mouse_position()
	match dragging:
		true:
			collision_shape_2d.set_deferred(\"disabled\",true)
			light.global_position = get_global_mouse_position()
		false:
			collision_shape_2d.set_deferred(\"disabled\",false)
			
	
func _input(event):
	if event is InputEventMouseMotion:
		if event.get_relative().x > 0:
			#print(\"Moving right\")
			linear_velocity = Vector2 (300,0)
		if event.get_relative().x < 0:
			#print(\"Moving left\")
			linear_velocity = Vector2 (-300,0)
		if event.get_relative().y > 0:
			#print(\"Moving down\")
			linear_velocity = Vector2 (0,300)
		if event.get_relative().y < 0:
			#print(\"Moving Up\")
			linear_velocity = Vector2 (0,-300)
	#if Input.is_action_just_pressed(\"LefMouse\"):
		#dragging = true
	#if Input.is_action_just_released(\"LefMouse\"):
		#dragging = false
	
"

[sub_resource type="CircleShape2D" id="CircleShape2D_nm60x"]
radius = 1.0

[node name="LevelSelect" type="Node2D"]
script = ExtResource("1_4bwas")

[node name="Swing-light" parent="." instance=ExtResource("1_dduat")]
position = Vector2(576, -680)
scale = Vector2(4, 4)

[node name="Light" parent="Swing-light" index="1"]
freeze = false

[node name="Mouse" type="RigidBody2D" parent="."]
collision_layer = 3
collision_mask = 3
can_sleep = false
freeze = true
script = SubResource("GDScript_f8i8q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_nm60x")

[node name="dont touch" parent="." instance=ExtResource("2_x00pf")]

[node name="Transition" parent="." instance=ExtResource("3_gou6y")]
y_sort_enabled = false
scale = Vector2(1.5, 1.5)
target_scene = ExtResource("4_h634r")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="1-1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 89.0
offset_top = 76.0
offset_right = 173.0
offset_bottom = 134.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "1-1"

[node name="1-2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 221.0
offset_top = 75.0
offset_right = 305.0
offset_bottom = 133.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "1-2"

[node name="1-3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 361.0
offset_top = 76.0
offset_right = 445.0
offset_bottom = 134.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "1-3"

[node name="2-1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 123.0
offset_top = 181.0
offset_right = 433.0
offset_bottom = 239.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "2-1 Persecusao"

[node name="3-1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 97.0
offset_top = 281.0
offset_right = 181.0
offset_bottom = 339.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "3-1
"

[node name="3-2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 235.0
offset_top = 282.0
offset_right = 319.0
offset_bottom = 340.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "3-2
"

[node name="3-3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 364.0
offset_top = 282.0
offset_right = 448.0
offset_bottom = 340.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "3-2
"

[node name="4-1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 99.0
offset_top = 363.0
offset_right = 183.0
offset_bottom = 421.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "4-1
"

[node name="4-2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 237.0
offset_top = 364.0
offset_right = 321.0
offset_bottom = 422.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "4-2
"

[node name="4-3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 366.0
offset_top = 364.0
offset_right = 450.0
offset_bottom = 422.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "4-3
"

[node name="5-1" type="Button" parent="Control"]
layout_mode = 0
offset_left = 100.0
offset_top = 452.0
offset_right = 184.0
offset_bottom = 510.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "5-1"

[node name="5-2" type="Button" parent="Control"]
layout_mode = 0
offset_left = 240.0
offset_top = 452.0
offset_right = 324.0
offset_bottom = 510.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "5-2"

[node name="5-3" type="Button" parent="Control"]
layout_mode = 0
offset_left = 367.0
offset_top = 453.0
offset_right = 451.0
offset_bottom = 511.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "5-3"

[node name="BOSS" type="Button" parent="Control"]
layout_mode = 0
offset_left = 125.0
offset_top = 538.0
offset_right = 435.0
offset_bottom = 596.0
focus_mode = 0
theme_override_fonts/font = ExtResource("6_rpahc")
disabled = true
text = "BOSSFIGHT"

[node name="Back" type="Button" parent="Control"]
layout_mode = 0
offset_left = 653.0
offset_top = 523.0
offset_right = 780.0
offset_bottom = 584.0
theme_override_fonts/font = ExtResource("6_rpahc")
text = "BACK"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="Control/1-1" to="." method="_1_1_on__pressed"]
[connection signal="pressed" from="Control/1-2" to="." method="_1_2_on__pressed"]
[connection signal="pressed" from="Control/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]

[editable path="Swing-light"]
